@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-28T16:28:03Z",
+  "timestamp" : "2022-03-29T08:23:13Z",
   "count_outdated" : 34,
   "uniques_outdated" : 8,
-  "count" : 46,
-  "uniques" : 10,
+  "count" : 47,
+  "uniques" : 11,
   "views" : [
     {
       "timestamp": "2022-03-28T00:00:00Z",
@@ -11,6 +11,13 @@
       "count_minmax": [ 9, 12 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-03-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
