@@ -1,11 +1,16 @@
 {
-  "count": 12,
+  "count": 13,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-03-28T00:00:00Z",
       "count": 12,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-03-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
